--- a/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.mdx
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.mdx
@@ -21,88 +21,96 @@ import '@carbon/ibm-products-web-components/es/components/notification-panel/ind
 ### HTML
 
 ```html
-      <c4p-notification-panel
-        .triggerButtonRef=${triggerButton}
-        .open="${openPanel}"
-        title-text="${args.titleText}"
-        today-text="${args.todayText}"
-        previous-text="${args.previousText}"
-        dismiss-all-label="${args.dismissAllLabel}"
-        donot-disturb-label="${args.doNotDisturbLabel}"
-        date-time-locale="${args.dateTimeLocale}"
-        @c4p-notification-dismiss-all=${dismissAllNotification}
-        @c4p-notification-click-outside=${clickOutside}
-      >
-        ${dataToday.length > 0
-          ? html`
-              ${dataToday.map((item) => {
-                return html`
-                  <c4p-notification
-                    slot="today"
-                    .open=${args.open}
-                    @c4p-notification-click=${item.onNotificationClick}
-                    @c4p-notification-dismiss=${() => {
-                      notificationSingleDismiss(item.id, 'today');
-                    }}
-                    type=${item.type}
-                    unread=${item.unread}
-                    .timestamp=${item.timestamp}
-                  >
-                    <cds-heading
-                      class=${classMap({
-                        [`${blockClassNotification}__notification-title`]: true,
-                        [`${blockClassNotification}__notification-title-unread`]:
-                          item.unread,
-                      })}
-                      slot="title"
-                    >
-                      ${item.title}
-                    </cds-heading>
-                    <div slot="description">${item.description}</div>
-                  </c4p-notification>
-                `;
-              })}
-            `
-          : ''}
-        ${dataPrevious.length > 0
-          ? html`
-              ${dataPrevious.map((item) => {
-                return html`
-                  <c4p-notification
-                    slot="previous"
-                    @c4p-notification-click=${item.onNotificationClick}
-                    @c4p-notification-dismiss=${() => {
-                      notificationSingleDismiss(item.id, 'previous');
-                    }}
-                    type=${item.type}
-                    unread=${item.unread}
-                    .timestamp=${item.timestamp}
-                  >
-                    <cds-heading
-                      class=${classMap({
-                        [`${blockClassNotification}__notification-title`]: true,
-                        [`${blockClassNotification}__notification-title-unread`]:
-                          item.unread,
-                      })}
-                      slot="title"
-                    >
-                      ${item.title}
-                    </cds-heading>
-                    <div slot="description">${item.description}</div>
-                  </c4p-notification>
-                `;
-              })}
-            `
-          : ''}
-        <c4p-notification-footer
-          slot="footer"
-          view-all-label="View all (${dataToday.length + dataPrevious.length})"
-          @c4p-notification-view-all=${action(`Clicked View All`)}
-          @c4p-notification-settings=${action(`Clicked Settings`)}
-        ></c4p-notification-footer>
-      </c4p-notification-panel>
+<c4p-notification-panel
+  .triggerButtonRef=${triggerButton}
+  .open="${openPanel}"
+  title-text="${args.titleText}"
+  today-text="${args.todayText}"
+  previous-text="${args.previousText}"
+  dismiss-all-label="${args.dismissAllLabel}"
+  donot-disturb-label="${args.doNotDisturbLabel}"
+  date-time-locale="${args.dateTimeLocale}"
+  @c4p-notification-dismiss-all=${dismissAllNotification}
+  @c4p-notification-click-outside=${clickOutside}
+>
+  ${dataToday.length > 0
+    ? html`
+        ${dataToday.map((item) => {
+          return html`
+            <c4p-notification
+              slot="today"
+              .open=${args.open}
+              @c4p-notification-click=${item.onNotificationClick}
+              @c4p-notification-dismiss=${() => {
+                notificationSingleDismiss(item.id, 'today');
+              }}
+              type=${item.type}
+              unread=${item.unread}
+              .timestamp=${item.timestamp}
+            >
+              <cds-heading
+                class=${classMap({
+                  [`${blockClassNotification}__notification-title`]: true,
+                  [`${blockClassNotification}__notification-title-unread`]:
+                    item.unread,
+                })}
+                slot="title"
+              >
+                ${item.title}
+              </cds-heading>
+              <div slot="description">${item.description}</div>
+            </c4p-notification>
+          `;
+        })}
+      `
+    : ''}
+  ${dataPrevious.length > 0
+    ? html`
+        ${dataPrevious.map((item) => {
+          return html`
+            <c4p-notification
+              slot="previous"
+              @c4p-notification-click=${item.onNotificationClick}
+              @c4p-notification-dismiss=${() => {
+                notificationSingleDismiss(item.id, 'previous');
+              }}
+              type=${item.type}
+              unread=${item.unread}
+              .timestamp=${item.timestamp}
+            >
+              <cds-heading
+                class=${classMap({
+                  [`${blockClassNotification}__notification-title`]: true,
+                  [`${blockClassNotification}__notification-title-unread`]:
+                    item.unread,
+                })}
+                slot="title"
+              >
+                ${item.title}
+              </cds-heading>
+              <div slot="description">${item.description}</div>
+            </c4p-notification>
+          `;
+        })}
+      `
+    : ''}
+  <c4p-notification-footer
+    slot="footer"
+    view-all-label="View all (${dataToday.length + dataPrevious.length})"
+    @c4p-notification-view-all=${action(`Clicked View All`)}
+    @c4p-notification-settings=${action(`Clicked Settings`)}
+  ></c4p-notification-footer>
+</c4p-notification-panel>
 ```
 
-## `<c4p-notification-panel>` attributes, properties and events
+## `<c4p-notification-panel>` attributes, properties, events and slots.
 
 <ArgTypes of="c4p-notification-panel" />
+
+## `<c4p-notification>` attributes, properties, events and slots.
+
+<ArgTypes of="c4p-notification" />
+
+## `<c4p-notification-footer>` attributes, properties, events and slots.
+
+<ArgTypes of="c4p-notification-footer" />
