--- a/packages/ibm-products-web-components/src/patterns/overflow/overflow-patterns.mdx
+++ b/packages/ibm-products-web-components/src/patterns/overflow/overflow-patterns.mdx
@@ -6,7 +6,7 @@ import * as SetOfActions from './set-of-actions.stories';
 
 <Meta of={SetOfTags} />
 
-# 1) Set of Tags
+## 1) Set of Tags
 
 The Set of tags displays a collection of tags that overflow into a popover when
 there are too many to fit on a single line. This pattern is commonly used to
@@ -38,12 +38,10 @@ state management.
 
 <Canvas of={SetOfTags.SetOfTags} sourceState="none" />
 
-# 2) Set of Actions
+## 2) Set of Actions
 
-The Set of actions displays a collection of tags that overflow into a popover
-when there are too many to fit on a single line. This pattern is commonly used
-to filter or categorize content, allowing users to access additional tags in a
-popover via the overflow operational tag.
+The Set of actions displays a group of actions in the form of icon-buttons which
+gets collapsed into an overflow menu when the width is constrained.
 
 Patterns have multiple ways of accomplishing a user need and typically use a
 combination of components with additional design considerations. The pattern
@@ -52,8 +50,8 @@ and extended further.
 
 To build this pattern, we recommend including the following components:
 
-- [cds-icon-button](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
-- [cds-overflow-menu](https://web-components.carbondesignsystem.com/?path=/docs/components-form-group)
+- [cds-icon-button](https://web-components.carbondesignsystem.com/?path=/docs/components-icon-button--overview)
+- [cds-overflow-menu](https://web-components.carbondesignsystem.com/?path=/docs/components-overflow-menu--overview)
 
 and the following utility:
 
@@ -69,3 +67,13 @@ handle state management.
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/set-of-tags)
 
 <Canvas of={SetOfActions.SetOfActions} sourceState="none" />
+
+## 3) Set of UserAvatars
+
+## 4) Collapsible button-set
+
+this is different from button-set with container queries, this will show a group
+of buttons collapse into a
+[menu-button](https://web-components.carbondesignsystem.com/?path=/docs/components-menu-button--overview)
+
+## 5) Collapsible breadcrumbs
