fix: interstitial screen release review

--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -39,7 +39,7 @@ explain, educate, and cultivate novice users into high-functioning power users.
 
 ```jsx
  <InterstitialScreen
-  isOpen
+  open
   onClose={function noRefCheck() {}}
 >
   <InterstitialScreen.Header
