--- a/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
@@ -6,12 +6,6 @@ import * as PageHeaderStories from './PageHeader.stories';
 
 # PageHeader
 
-[Source code](https://github.com/carbon-design-system/carbon/tree/main/packages/react/src/components/PageHeader)
-&nbsp;|&nbsp;
-[Usage guidelines](https://www.carbondesignsystem.com/components/page-header/usage)
-&nbsp;|&nbsp;
-[Accessibility](https://www.carbondesignsystem.com/components/page-header/accessibility)
-
 ## Table of Contents
 
 - [Overview](#overview)
@@ -119,7 +113,7 @@ return (
       contextualActions={
         <>
           <Tag className="tag" type="blue" size="lg">
-            Moop
+            Tag
           </Tag>
         </>
       }
@@ -129,9 +123,10 @@ return (
           actions={actionItems}></PageHeader.ContentPageActions>
       }>
       <PageHeader.ContentText subtitle="Subtitle">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.
+        Built for modern teams, our technology platform simplifies complexity
+        with powerful APIs, real-time collaboration tools, and seamless
+        integration. From deployment to monitoring, we help you ship faster,
+        scale efficiently, and stay in control every step of the way.
       </PageHeader.ContentText>
     </PageHeader.Content>
   </PageHeader.Root>
@@ -184,7 +179,7 @@ return (
 
 ## PageHeader.TabsBar
 
-To render the Tabs zone, utilitize the `PageHeader.TabBar` component, passing in the `TabList` and `Tab` components
+To render the Tabs zone, utilize the `PageHeader.TabBar` component, passing in the `TabList` and `Tab` components
 as its children. Then set up the `TabPanels` and `TabPanel` components outside of the `PageHeader`, making sure to
 wrap all components within the `Tabs` component to ensures proper linkage of tab and its associated panel.
 
