fix(storybook): use new import for addon-docs/blocks

--- a/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
+++ b/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { BigNumbers } from '.';
 import * as BigNumbersStories from './BigNumbers.stories';
