--- a/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
+++ b/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
@@ -1,6 +1,6 @@
 {/* <!-- `position:fixed` cause rendering issues, so do not render the modal --> */}
 
-import { Story, Controls, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 
 # Feature flags
