--- a/packages/ibm-products/src/global/js/hooks/useOverflowItems/useOverflowItems.mdx
+++ b/packages/ibm-products/src/global/js/hooks/useOverflowItems/useOverflowItems.mdx
@@ -1,4 +1,4 @@
-import { Story, Canvas } from '@storybook/addon-docs';
+import { Story, Canvas } from '@storybook/addon-docs/blocks';
 import * as UseOverflowItemsStories from './useOverflowItems.stories';
 import { useOverflowItems } from '.';
 
