--- a/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
+++ b/packages/ibm-products/src/components/APIKeyModal/APIKeyModal.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { APIKeyModal } from '.';
 import * as stories from './APIKeyModal.stories';
 import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
