--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas, Meta } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas, Meta } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Coachmark, CoachmarkFixed } from '..';
 import * as CoachmarkStories from './Coachmark.stories';
