--- a/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
+++ b/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DataSpreadsheet } from '.';
 import * as stories from './DataSpreadsheet.stories';
