--- a/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
+++ b/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DecoratorLink } from '.';
 import * as DecoratorLinkStories from './DecoratorLink.stories';
