--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckboxWithOverflow/FilterPanelCheckboxWithOverflow.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckboxWithOverflow/FilterPanelCheckboxWithOverflow.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelCheckboxWithOverflow } from '.';
 import * as FilterPanelCheckboxWithOverflowStories from './FilterPanelCheckboxWithOverflow.stories';
