--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelGroup/FilterPanelGroup.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelGroup/FilterPanelGroup.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelGroup } from '.';
 import * as FilterPanelGroupStories from './FilterPanelGroup.stories';
