--- a/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
+++ b/packages/ibm-products/src/components/GetStartedCard/GetStartedCard.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { GetStartedCard } from '.';
 import * as stories from './GetStartedCard.stories';
