--- a/packages/ibm-products/src/components/Guidebanner/Guidebanner.mdx
+++ b/packages/ibm-products/src/components/Guidebanner/Guidebanner.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs/blocks';
 import { StackblitzLink } from '../../global/js/utils/story-helper';
 import { Guidebanner } from '.';
 import * as stories from './Guidebanner.stories';
