--- a/packages/ibm-products/src/components/InlineTip/InlineTip.mdx
+++ b/packages/ibm-products/src/components/InlineTip/InlineTip.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs/blocks';
 import { StackblitzLink } from '../../global/js/utils/story-helper';
 import { InlineTip } from '.';
 import * as stories from './InlineTip.stories';
