--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source } from '@storybook/addon-docs';
+import { Story, Controls, Source } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { InterstitialScreen } from '.';
 
