--- a/packages/ibm-products/src/components/NonLinearReading/NonLinearReading.mdx
+++ b/packages/ibm-products/src/components/NonLinearReading/NonLinearReading.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Canvas } from '@storybook/addon-docs/blocks';
 import { StackblitzLink } from '../../global/js/utils/story-helper';
 import { NonLinearReading } from '.';
 import * as stories from './NonLinearReading.stories';
