--- a/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
+++ b/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
@@ -1,4 +1,4 @@
-import { Story, Controls, Source, Canvas } from '@storybook/addon-docs';
+import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { SearchBar } from '.';
 import * as SearchBarStories from './SearchBar.stories';
