--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -1,5 +1,5 @@
 import { ArgTypes, Markdown, Meta } from '@storybook/addon-docs/blocks';
-import { Canvas } from '@storybook/addon-docs';
+import { Canvas } from '@storybook/addon-docs/blocks';
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
 import * as TruncatedText from './truncated-text.stories';
 
