--- a/packages/ibm-products-web-components/src/components/page-header/page-header.mdx
+++ b/packages/ibm-products-web-components/src/components/page-header/page-header.mdx
@@ -30,7 +30,7 @@ import '@carbon/web-components/es/components/button/index.js';
 
 The `c4p-page-header` is a large family of components, composed of three zones; the Breadcrumb, Content, and Tabs.
 
-<Canvas of={PageHeaderStories.Default} />
+<Canvas className='page-header--docs-demo' of={PageHeaderStories.Default} />
 
 ## Breadcrumb
 
@@ -41,7 +41,7 @@ the breadcrumb content.
 
 ## Content
 
-<Canvas of={PageHeaderStories.ContentWithContextualActionsAndPageActions} />
+<Canvas className='page-header--docs-demo' of={PageHeaderStories.ContentWithContextualActionsAndPageActions} />
 
 The `c4p-page-header-content` component defines the primary content area of the Page header, including the title, subtitle, and
 any supporting text or contextual actions. It accepts a `title` attribute to display the main heading and has an `icon` slot
@@ -71,7 +71,7 @@ To support use cases such as tags, `contextual-actions` slot can be to render co
 
 ### Content With Hero Image
 
-<Canvas of={PageHeaderStories.ContentWithHeroImage} />
+<Canvas className='page-header--docs-demo' of={PageHeaderStories.ContentWithHeroImage} />
 
 When including a hero image within the Page header, the Carbon Grid classes will need to be utilized. In addition,
 the `withinGrid` attribute has to be set in the `c4p-page-header-content` and `c4p-page-header-breadcrumb` components.
@@ -149,7 +149,7 @@ as within its `tabs` slot. Then set up the corresponding tab panel elements outs
 
 ### Tabs With Tags
 
-<Canvas of={PageHeaderStories.TabBarWithTabsAndTags} />
+<Canvas className='page-header--docs-demo' of={PageHeaderStories.TabBarWithTabsAndTags} />
 
 The `c4p-page-header-tabs` component has a `tags` slot for tag components.
 
