fix(save pattern): update story and example

--- a/packages/ibm-products-web-components/src/patterns/saving/saving.mdx
+++ b/packages/ibm-products-web-components/src/patterns/saving/saving.mdx
@@ -10,6 +10,7 @@ To build this pattern, we recommend including the following components:
 
 - [cds-textarea](https://web-components.carbondesignsystem.com/?path=/docs/components-text-area)
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
+- [cds-inline-loading](https://web-components.carbondesignsystem.com/?path=/docs/components-inline-loading)
 
 These components are used within the `auto-saving` and `manual-saving` wrapper components to handle state management.
 
