fix(notification panel): update doc link to stackblitz

--- a/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.mdx
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.mdx
@@ -6,6 +6,12 @@ import * as NotificationPanelStories from './notification-panel.stories';
 
 # NotificationPanel
 
+> 💡 Check our
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/notification-panel)
+> example implementation.
+
+[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/notification-panel)
+
 The NotificationsPanel sets expectations on the behavior for notifications, allowing the user to view and interact with them all in one place.
 
 The component includes a composable footer section, exposed via the footer slot. Adopters can insert custom content into this slot and, if they choose to do so, are expected to provide the appropriate styles. Alternatively, the `c4p-notification-footer` component can be used, which comes with built-in styling.
