--- a/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
@@ -177,7 +177,7 @@ return (
 
 ```
 
-## PageHeader.TabsBar
+## PageHeader.TabBar
 
 To render the Tabs zone, utilize the `PageHeader.TabBar` component, passing in the `TabList` and `Tab` components
 as its children. Then set up the `TabPanels` and `TabPanel` components outside of the `PageHeader`, making sure to
@@ -205,7 +205,7 @@ wrap all components within the `Tabs` component to ensures proper linkage of tab
 </Tabs>
 ```
 
-### PageHeader.TabsBar With Tags
+### PageHeader.TabBar With Tags
 
 <Canvas>
   <Story of={PageHeaderStories.TabBarWithTabsAndTags} />
@@ -244,6 +244,27 @@ return (
   </TabPanels>
 </Tabs>
 );
+```
+
+### PageHeader.TabBar With scroller button
+
+To include the scroller button to expand and collapse the header, pass `PageHeader.ScrollButton` to the `scroller` prop of the tab bar.
+
+```jsx
+<Tabs>
+  <PageHeader.Root>
+    <PageHeader.TabBar tags={tags} scroller={<PageHeader.ScrollButton />}>
+      <TabList>
+        <Tab>Tab 1</Tab>
+        ...
+      </TabList>
+    </PageHeader.TabBar>
+  </PageHeader.Root>
+  <TabPanels>
+    <TabPanel>Tab Panel 1</TabPanel>
+    ...
+  </TabPanels>
+</Tabs>
 ```
 
 ## Component API
