--- a/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
@@ -24,7 +24,7 @@ The `PageHeader` is a large family of components, composed of three zones; the B
 ## PageHeader.BreadcrumbBar
 
 The `PageHeader.BreadcrumbBar` component is used to render the breadcrumb navigation area within the `PageHeader`.
-It accepts `Breadcrumb` and `BreadcrumbItem` components as children to define the breadcrumb trail. Additionally, it accepts
+It accepts `Breadcrumb`, `BreadcrumbItem`, and `PageHeader.TitleBreadcrumb` components as children to define the breadcrumb trail. Additionally, it accepts
 `contentActions` and` pageActions` props, allowing for actions, such as `Button` or `IconButton` — alongside
 the breadcrumb content.
 
@@ -56,6 +56,7 @@ return (
       <Breadcrumb>
         <BreadcrumbItem href="/#">Breadcrumb 1</BreadcrumbItem>
         <BreadcrumbItem href="#">Breadcrumb 2</BreadcrumbItem>
+        <PageHeader.TitleBreadcrumb>Title</PageHeader.TitleBreadcrumb>
       </Breadcrumb>
     </PageHeader.BreadcrumbBar>
     ...
