--- a/packages/ibm-products-web-components/src/patterns/overflow/Overview.mdx
+++ b/packages/ibm-products-web-components/src/patterns/overflow/Overview.mdx
@@ -1,6 +1,5 @@
-import { ArgTypes, Markdown, Meta, Story } from '@storybook/addon-docs/blocks';
+import { ArgTypes, Markdown, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
-import { Canvas } from '@storybook/addon-docs';
 import * as SetOfTags from './set-of-tags.stories';
 import * as SetOfActions from './set-of-actions.stories';
 import * as SetOfUsers from './set-of-users.stories';
