--- a/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
+++ b/packages/ibm-products-web-components/src/components/truncated-text/truncated-text.mdx
@@ -11,10 +11,10 @@ The truncated text utility can truncate text based on a specified number of
 lines, provided via a prop. It offers two configurable options for revealing the
 full content:
 
-- Tooltip mode `with="tooltip"`: Displays the full text in a tooltip overlay on
+- Tooltip mode `type="tooltip"`: Displays the full text in a tooltip overlay on
   hover.
 
-- Expandable mode `with="expand"`: Reveals the complete content through
+- Expandable mode `type="expand"`: Reveals the complete content through
   collapsible “Read more” / “Read less” toggles. These labels can be customized
   using the `expand-label` and `collapse-label` attributes on the component.
 
@@ -23,13 +23,13 @@ full content:
 > example implementation.
 > [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/truncated-text)
 
-## Default with tooltip
+## Default type tooltip
 
 <Canvas of={TruncatedText.Default} />
 
-## With expand
+## Type expand
 
-<Canvas of={TruncatedText.WithExpand} />
+<Canvas of={TruncatedText.typeExpand} />
 
 ## Getting started
 
@@ -47,7 +47,7 @@ import '@carbon/ibm-products-web-components/es/components/truncated-text/index.j
 <c4p-truncated-text
   value="Buttons are used to initialize an action, either in the background or foreground of an experience. There are several kinds of buttons. Primary buttons should be used for the principal call to action on the page. Secondary buttons should be used for secondary actions on each page. Danger buttons should be used for a negative action (such as Delete) on the page. Modify the behavior of the button by changing its event properties. Small buttons may be used when there is not enough space for a regular-sized button. This issue is most often found in tables. Small buttons should have three words or fewer."
   lines="2"
-  with="tooltip"
+  type="tooltip"
 ></c4p-truncated-text>
 ```
 
