--- a/packages/ibm-products/src/components/RemoveModal/RemoveModal.mdx
+++ b/packages/ibm-products/src/components/RemoveModal/RemoveModal.mdx
@@ -4,7 +4,7 @@ import { RemoveModal } from '.';
 import * as stories from './RemoveModal.stories';
 import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
-# Import Modal
+# Remove Modal
 
 [Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/delete-and-remove/usage/)
 |
