fix: example code

--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -11,12 +11,19 @@ import * as stories from './GenerateAnAPIKey.stories';
 - [Overview](#overview)
 - [Example usage](#example-usage)
 
-## Overview
+## Ingredients
 
-## Example usage
+```jsx
+import { Button, Modal, TextInput } from '@carbon/react';
+```
+
+## Getting started
+
+Instant generation
+
 ```jsx
 import React, { useState } from 'react';
-import { Modal, Button, TextInput } from '@carbon/react';
+import { Button, Modal, TextInput } from '@carbon/react';
 
 const App = () => {
   const [open, setOpen] = useState(false);
