--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -53,7 +53,7 @@ const App = () => {
 
   return (
     <div className="app">
-      <Button onClick={fetchKey}>
+      <Button onClick={fetchKey} disabled={loading}>
         {loading ? 'Generating...' : 'Generate'}
       </Button>
       <Modal
