chore: init generate and edit pattern code

--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -19,7 +19,7 @@ import { Button, Modal, TextInput } from '@carbon/react';
 
 ## Getting started
 
-Instant generation
+Instant generate
 
 ```jsx
 import React, { useState } from 'react';
@@ -75,4 +75,12 @@ const App = () => {
 };
 ```
 
-<Canvas of={stories.instantGeneration} />
+<Canvas of={stories.instantGenerate} />
+
+Generate
+
+<Canvas of={stories.generate} />
+
+Edit
+
+<Canvas of={stories.edit} />
