fix(build): update story imports in docs and remove old import script

--- a/packages/ibm-products/src/components/TruncatedText/TruncatedText.mdx
+++ b/packages/ibm-products/src/components/TruncatedText/TruncatedText.mdx
@@ -27,7 +27,7 @@ full content:
 ## Example usage
 
 <Canvas>
-  <Story of={stories.TruncatedText} />
+  <Story of={stories.WithTooltip} />
 </Canvas>
 
 ## Component API
