fix: add password input

--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -4,7 +4,7 @@ import * as stories from './GenerateAnAPIKey.stories';
 
 # Generate an API key
 
-[Usage guidelines](#)
+[Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/generate-an-api-key/usage/)
 
 ## Table of Contents
 
@@ -14,66 +14,12 @@ import * as stories from './GenerateAnAPIKey.stories';
 ## Ingredients
 
 ```jsx
-import { Button, Modal, TextInput } from '@carbon/react';
+import { Button, Modal, TextInput, PasswordInput } from '@carbon/react';
 ```
 
 ## Getting started
 
 Instant generate
-
-```jsx
-import React, { useState } from 'react';
-import { Button, Modal, TextInput } from '@carbon/react';
-
-const App = () => {
-  const [open, setOpen] = useState(false);
-  const [loading, setLoading] = useState(false);
-  const [key, setKey] = useState('');
-
-  const fetchKey = async () => {
-    setLoading(true);
-    // simulate API call
-    await new Promise((resolve) => setTimeout(resolve, 1000));
-    setLoading(false);
-    setKey('082be29c-3622-4276-bc58-695e2a12bd93');
-    toggleModal();
-  };
-
-  const copyKey = async () => {
-    try {
-      await navigator.clipboard.writeText(key);
-    } catch (e) {
-      console.error(e);
-    }
-  };
-
-  const toggleModal = () => {
-    setOpen(!open);
-  };
-
-  return (
-    <div className="app">
-      <Button onClick={fetchKey} disabled={loading}>
-        {loading ? 'Generating...' : 'Generate'}
-      </Button>
-      <Modal
-        open={open}
-        onRequestClose={toggleModal}
-        modalHeading="API key successfully created"
-        primaryButtonText="Copy"
-        secondaryButtonText="Close"
-        onRequestSubmit={copyKey}
-      >
-        <TextInput value={key} readOnly />
-        <p>
-          This is your unique API key and is non-recoverable. If you lose this
-          API key, you will have to reset it.
-        </p>
-      </Modal>
-    </div>
-  );
-};
-```
 
 <Canvas of={stories.instantGenerate} />
 
