chore: add stackblitz examples

--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -1,6 +1,7 @@
 import { Story, Controls, Source, Canvas } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import * as stories from './GenerateAnAPIKey.stories';
+import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 # Generate an API key
 
@@ -21,12 +22,45 @@ import { Button, Modal, TextInput, PasswordInput } from '@carbon/react';
 
 Instant generate
 
-<Canvas of={stories.instantGenerate} />
+<Canvas
+  of={stories.instantGenerate}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.instantGenerate, 
+        'styles': stories.default.parameters.styles
+      }),
+    },
+  ]}
+/>
 
 Generate
 
-<Canvas of={stories.generate} />
+<Canvas
+  of={stories.generate}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.generate, 
+        'styles': stories.default.parameters.styles
+      }),
+    },
+  ]}
+/>
 
 Edit
 
-<Canvas of={stories.edit} />
+<Canvas
+  of={stories.edit}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () => stackblitzPrefillConfig({
+        'story': stories.edit, 
+        'styles': stories.default.parameters.styles
+      }),
+    },
+  ]}
+/>
