fix: review fixes

--- a/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
+++ b/packages/ibm-products/src/components/GenerateAnAPIKey/GenerateAnAPIKey.mdx
@@ -18,9 +18,9 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 import { Button, Modal, TextInput, PasswordInput } from '@carbon/react';
 ```
 
-## Getting started
+## Examples
 
-Instant generate
+### Instant generate
 
 <Canvas
   of={stories.instantGenerate}
@@ -35,7 +35,7 @@ Instant generate
   ]}
 />
 
-Generate
+### Generate
 
 <Canvas
   of={stories.generate}
@@ -50,7 +50,7 @@ Generate
   ]}
 />
 
-Edit
+### Edit
 
 <Canvas
   of={stories.edit}
