fix(Storybook): render the correct story in Storybook for few components

--- a/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
+++ b/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
@@ -21,32 +21,27 @@ import * as SearchBarStories from './SearchBar.stories';
 
 ### Default
 
-<Canvas>
-  <Story of={SearchBarStories.Default} />
+<Canvas of={SearchBarStories.Default} >
 </Canvas>
 
 ### Initial Value
 
-<Canvas>
-  <Story of={SearchBarStories.InitialValue} />
+<Canvas of={SearchBarStories.InitialValue} >
 </Canvas>
 
 ### Scopes
 
-<Canvas>
-  <Story of={SearchBarStories.Scopes} />
+<Canvas of={SearchBarStories.Scopes} >
 </Canvas>
 
 ### Unsorted Scopes
 
-<Canvas>
-  <Story of={SearchBarStories.UnsortedScopes} />
+<Canvas of={SearchBarStories.UnsortedScopes} >
 </Canvas>
 
 ### Selected Scopes
 
-<Canvas>
-  <Story of={SearchBarStories.SelectedScopes} />
+<Canvas of={SearchBarStories.SelectedScopes} >
 </Canvas>
 
 ## Code sample
