--- a/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
+++ b/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
@@ -23,14 +23,12 @@ import * as stories from './Toolbar.stories';
 
 ### Default
 
-<Canvas>
-  <Story of={stories._Toolbar} />
+<Canvas of={stories._Toolbar} >
 </Canvas>
 
 ### With Image
 
-<Canvas>
-  <Story of={stories.vertical} />
+<Canvas of={stories.vertical} >
 </Canvas>
 
 ## Code sample
