--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -54,14 +54,12 @@ the lighter and darker themes.
 
 ### Default
 
-<Canvas>
-  <Story of={UserAvatarStories.Default} />
+<Canvas of={UserAvatarStories.Default}>
 </Canvas>
 
 ### With Image
 
-<Canvas>
-  <Story of={UserAvatarStories.WithImage} />
+<Canvas of={UserAvatarStories.WithImage}>
 </Canvas>
 
 ## Code sample
