--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -29,32 +29,27 @@ tags associated with the object.
 
 ### Tags with overflow count and overflow modal
 
-<Canvas>
-  <Story of={TagOverflowStories.TagsWithOverflowModal} />
+<Canvas of={TagOverflowStories.TagsWithOverflowModal} >
 </Canvas>
 
 ### Tags with truncation and overflow count
 
-<Canvas>
-  <Story of={TagOverflowStories.TagsWithTruncation} />
+<Canvas of={TagOverflowStories.TagsWithTruncation} >
 </Canvas>
 
 ### Multiline tags
 
-<Canvas>
-  <Story of={TagOverflowStories.MultilineTags} />
+<Canvas of={TagOverflowStories.MultilineTags} >
 </Canvas>
 
 ### UserAvatars with overflow count and overflow modal
 
-<Canvas>
-  <Story of={TagOverflowStories.UserAvatarsWithOverflowModal} />
+<Canvas of={TagOverflowStories.UserAvatarsWithOverflowModal} >
 </Canvas>
 
 ### Custom components with overflow count and overflow modal
 
-<Canvas>
-  <Story of={TagOverflowStories.CustomComponentsWithOverflowModal} />
+<Canvas of={TagOverflowStories.CustomComponentsWithOverflowModal} >
 </Canvas>
 
 ## Coded example
