docs: update feature flag imports

--- a/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
+++ b/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
@@ -27,7 +27,7 @@ application's react tree. Multiple feature flags can be configured at the same
 time.
 
 ```jsx
-import { unstable_FeatureFlags as FeatureFlags } from '@carbon/ibm-products';
+import { preview__FeatureFlags as FeatureFlags } from '@carbon/ibm-products';
 
 <FeatureFlags
   flags={{
@@ -45,7 +45,7 @@ entire app, or only certain pages/routes/sections of your application.
 ```jsx
 import { StrictMode } from 'react';
 import { createRoot } from 'react-dom/client';
-import { unstable_FeatureFlags as FeatureFlags } from '@carbon/ibm-products';
+import { preview__FeatureFlags as FeatureFlags } from '@carbon/ibm-products';
 import App from './App';
 
 const root = createRoot(document.getElementById('root'));
