chore: clean up language
Co-Authored-By: Rich Kummer <rckummer@gmail.com>

--- a/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
+++ b/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
@@ -14,20 +14,20 @@ Patterns can be accomplished in multiple ways utilizing a combination of compone
 The prebuilt patterns in this library are based on existing [patterns](https://pages.github.ibm.com/carbon/ibm-products/patterns/overview/patterns/)
 documented on the Carbon for IBM Products website, however, they are built like traditional components that can also be imported directly for use.
 
-While these prebuilt patterns are available for use, they only capture a subset of use cases from the broader patterns they represent and may
-result in limitations in their component APIs. For a more flexible approach, consider leveraging the equivalent pattern code.
+While these prebuilt patterns are available for use directly in code, they only capture a subset of use cases from the broader patterns they represent
+and their flexibility may be limited by their component APIs. For a more flexible approach, consider leveraging the equivalent pattern code.
 
 ## How prebuilt patterns and patterns differ
 
-Prebuilt patterns can be useful, containing a number of features built-in. However, these have stricter APIs and may have limited flexibility.
+Prebuilt patterns can be useful, containing a number of features built-in. However, prebuilt patterns have stricter APIs and may have limited flexibility.
 Many of our patterns include “recipes,” that include a list of components used to deliver the pattern. These are often provided as example code
 that you can adopt or extend further for your own use case.
 
 ## Prebuilt patterns to patterns
 
-While many of these may not have pattern equivalents at this time, we will be adding more patterns.
+While many of the prebuilt patterns may not have pattern equivalents at this time, we will be adding more patterns in the future.
 
-| Prebuilt pattern name                | Pattern |
+| Prebuilt pattern name                | Equivalent pattern |
 ---------------------------------------|----------
 | Add and select `MultiAddSelect`      | —
 | Add and select `SingleAddSelect`     | —
@@ -45,8 +45,8 @@ While many of these may not have pattern equivalents at this time, we will be ad
 
 ## Prebuilt patterns to other alternatives
 
-On occasion, new versions of our components (and prebuilt patterns) may be in progress in other libraries. These may also exist at different
-points of Carbon’s [product development lifecycle](https://carbondesignsystem.com/contributing/product-development-lifecycle/).
+On occasion, new versions of our components and prebuilt patterns may be in progress in other libraries. These may also exist at different
+points of Carbon’s [Product Development Lifecycle](https://carbondesignsystem.com/contributing/product-development-lifecycle/).
 
 | Prebuilt pattern name        | Alternative | Status         |
 -------------------------------|-------------|----------------|
