chore: clean up docs
Co-authored-by: Rich Kummer <rckummer@gmail.com>

--- a/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
+++ b/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
@@ -10,7 +10,7 @@ import LinkTo from '@storybook/addon-links/react';
 - [Prebuilt patterns to patterns](#prebuilt-patterns-to-patterns)
 - [Prebuilt patterns to other alternatives](#prebuilt-patterns-to-other-alternatives)
 
-Patterns can be accomplished in multiple ways utilizing a combination of component(s) with additional design considerations.
+Patterns can be accomplished in multiple ways utilizing one or more components with additional design considerations.
 The prebuilt patterns in this library are based on existing [patterns](https://pages.github.ibm.com/carbon/ibm-products/patterns/overview/patterns/)
 documented on the Carbon for IBM Products website, however, they are built like traditional components that can also be imported directly for use.
 
@@ -20,7 +20,7 @@ and their flexibility may be limited by their component APIs. For a more flexibl
 ## How prebuilt patterns and patterns differ
 
 Prebuilt patterns can be useful, containing a number of features built-in. However, prebuilt patterns have stricter APIs and may have limited flexibility.
-Many of our patterns include “recipes,” that include a list of components used to deliver the pattern. These are often provided as example code
+Many of our patterns include “recipes” that list the components used to deliver the pattern. These are often provided as example code
 that you can adopt or extend further for your own use case.
 
 ## Prebuilt patterns to patterns
