test(stepflow): undefined not supported in stepcontext

--- a/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
+++ b/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
@@ -46,7 +46,7 @@ const SteppedPanel = () => {
 }
 ```
 
-Use `<StepGroup>` and step components with your new step enabled side panel component
+Use `<StepGroup>` and step components with your new step enabled side panel component. Any content outside of the `<StepGroup>` will render on every step.
 ```tsx
 const Example = () => {
   return <SteppedPanel>
