docs(stepflow): update usage example

--- a/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
+++ b/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
@@ -65,6 +65,8 @@ const Step1 = () => {
   const { email } = formState ?? {};
   return (
     <TextInput
+      labelText="Email"
+      value={email ?? ''}
       onChange={(e) => {
         setFormState?.((prev: object) => ({
           ...prev,
